--- a/Sivilab.API/appsettings.json
+++ b/Sivilab.API/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=172.16.1.235,1422;Database=empleos;User Id=empleos;Password=Xalf$150728;"
+  },
+  "Jwt": {
+    "SecretKey": "8JZy9~'.9}UF}4J=v#jtY/IcJ2j88"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
