--- a/Sivilab.API/appsettings.json
+++ b/Sivilab.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=172.16.1.235,1422;Database=empleos;User Id=empleos;Password=Xalf$150728;"
+    "DefaultConnection": "Data Source=172.16.1.235,1422; Initial Catalog=dbempleos; User ID=empleos;Password=Xalf$150728;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Jwt": {
     "SecretKey": "8JZy9~'.9}UF}4J=v#jtY/IcJ2j88"
