--- a/Sivilab.API/appsettings.json
+++ b/Sivilab.API/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Data Source=172.16.1.235,1422; Initial Catalog=dbempleos; User ID=empleos;Password=Xalf$150728;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Jwt": {
-    "SecretKey": "8JZy9~'.9}UF}4J=v#jtY/IcJ2j88"
+    "SecretKey": "Wqa_pWEQqbI.F\\v05OoJ|PSr0tL~_.H2/?=:[w*!tH6%Y@9&V;"
   },
   "Logging": {
     "LogLevel": {
