--- a/Sivilab.PortalEmpleo/Sivilab.PortalEmpleo.csproj
+++ b/Sivilab.PortalEmpleo/Sivilab.PortalEmpleo.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sivilab.Models\Sivilab.Models.csproj" />
+  </ItemGroup>
+
 </Project>
