--- a/Sivilab.PortalEmpleo/Sivilab.PortalEmpleo.csproj
+++ b/Sivilab.PortalEmpleo/Sivilab.PortalEmpleo.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Sivilab.API\Sivilab.API.csproj" />
     <ProjectReference Include="..\Sivilab.Models\Sivilab.Models.csproj" />
   </ItemGroup>
 
