--- a/Sivilab.Web/Sivilab.Web.csproj
+++ b/Sivilab.Web/Sivilab.Web.csproj
@@ -6,4 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sivilab.API\Sivilab.API.csproj" />
+    <ProjectReference Include="..\Sivilab.Data\Sivilab.Data.csproj" />
+    <ProjectReference Include="..\Sivilab.Models\Sivilab.Models.csproj" />
+  </ItemGroup>
+
 </Project>
