--- a/Sivilab.PortalEmpleo/Sivilab.PortalEmpleo.csproj
+++ b/Sivilab.PortalEmpleo/Sivilab.PortalEmpleo.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Sivilab.Models\Sivilab.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
