--- a/Sivilab.PortalEmpleo/Sivilab.PortalEmpleo.csproj
+++ b/Sivilab.PortalEmpleo/Sivilab.PortalEmpleo.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Blazor.Bootstrap" Version="3.4.0" />
+  </ItemGroup>
+
 </Project>
